2005-03-01  Stig Petter Olsroed  <stigpo@users.sourceforge.net>
	    Nick Clifton  <nickc@redhat.com>

	* gas/arm/inst.d: Allow for ARM ports which decode the reloc
	associated with branches and so show the exact symbolic
	destination address rather than an offset from the start of the
	section.
	* gas/arm/pic.d: Likewise.
	
2005-03-01  Alan Modra  <amodra@bigpond.net.au>

	* gas/m68k/mcf-emac.d: Allow for 64-bit addresses.
	* gas/m68k/mcf-mac.d: Likewise.
	* gas/m68k/mcf-mov3q.d: Likewise.
	* gas/m68k/mode5.d: Likewise.

2005-02-22  Eric Christopher  <echristo@redhat.com>

	* gas/mips/elf-rel10.d: Update for label change.

2005-02-22  Maciej W. Rozycki  <macro@mips.com>

	* gas/mips/mips16-dwarf2.d: Pass -mabi=32.  Include relocation
	information.
	* gas/mips/mips16-dwarf2-n32.d: New test to check DWARF2 line
	information for MIPS16 for the n32 ABI.
	* gas/mips/mips.exp. Run the new test.

2005-02-22  Eric Christopher  <echristo@redhat.com>

	* gas/mips/elf-rel10.s: Add label for frob.

2005-02-22  Maciej W. Rozycki  <macro@mips.com>

	* gas/mips/mips16-dwarf2.d: New test to check DWARF2 line
	information for MIPS16.
	* gas/mips/mips16-dwarf2.s: Source for the new test.
	* gas/mips/mips.exp: Run the new test.

2005-02-21  Alan Modra  <amodra@bigpond.net.au>

	* gas/d10v/instruction_packing-005.d: Adjust.
	* gas/d10v/instruction_packing-008.d: Ignore disassembled stabs.
	* gas/d10v/instruction_packing-009.d: Likewise.
	* gas/d10v/instruction_packing-010.d: Likewise.
	* gas/d10v/warning-001.d: Use #warning instead of #error.
	* gas/d10v/warning-002.d: Likewise.
	* gas/d10v/warning-003.d: Likewise.
	* gas/d10v/warning-004.d: Likewise.
	* gas/d10v/warning-005.d: Likewise.
	* gas/d10v/warning-006.d: Likewise.
	* gas/d10v/warning-007.d: Likewise.
	* gas/d10v/warning-008.d: Likewise.
	* gas/d10v/warning-009.d: Likewise.
	* gas/d10v/warning-010.d: Likewise.
	* gas/d10v/warning-011.d: Likewise.
	* gas/d10v/warning-012.d: Likewise.
	* gas/d10v/warning-013.d: Likewise.