@@ -56,13 +56,16 @@ if {[istarget *arm*-*-*] || [istarget "xscale-*-*"]} then {
     run_errors_test "req" "-mcpu=arm7m" ".req errors"
     run_errors_test "armv1-bad" "-mcpu=arm7m" "ARM v1 errors"
     run_errors_test "r15-bad" "" "Invalid use of r15 errors"
-    run_errors_test "undefined" "" "Undefined local label error"
 
     if {[istarget *-*-*elf*] || [istarget *-*-linux*] || [istarget *-*-*eabi]} then {
+        run_errors_test "undefined" "" "Undefined local label error"
 	run_dump_test "pic"
 	run_dump_test "mapping"
 	gas_test "bignum1.s" "" $stdoptlist "bignums"
 	run_dump_test "unwind"
+    } else {
+	# COFF based ports use a different naming convention for local labels.
+       run_errors_test "undefined_coff" "" "Undefined local label error"
     }
 
     if {! [istarget arm*-*-aout] && ![istarget arm-*-pe]} then {
