@@ -1,0 +1,2 @@
+[^:]*: Assembler messages:
+[^:]*:1: Error: undefined local label `Lval'
